--- a/style.css
+++ b/style.css
@@ -39,8 +39,7 @@ body {
 
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  place-items: center;
 
   border-radius: 1rem;
 }
